made new changes

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <p class="section-subtitle">About Us</p>
 
                         <h2 class="h2 section-title">
-                            The Leading Real Estate Rental Marketplace
+                            The Leading Real Estate Rental Marketplace To Homeland
                         </h2>
 
                         <p class="about-text">Over 39,000 people work for us in more than 70 countries all over this breadth of global coverage,
